--- a/G10_class_activation_map.ipynb
+++ b/G10_class_activation_map.ipynb
@@ -1235,7 +1235,9 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1266,6 +1268,13 @@
     "\n",
     "blended_image = visualize_cam_on_image(cam_image_3channel, origin_image)\n",
     "plt.imshow(blended_image)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4) 원본 이미지 위에 visualize_cam_on_image() 함수를 이용해서 다양한 Conv 레이어와 겹쳐서 시각화 해보기"
    ]
   },
   {
@@ -1525,8 +1534,7 @@
    "metadata": {},
    "source": [
     "# Detection with CAM and Grad-Cam\n",
-    "- 바운딩 박스\n",
-    "- 마지막으로 이번에는 CAM과 Grad_Cam으로 물체의 위치를 찾는 detection을 해 보도록 하겠습니다.\n",
+    "- 바운딩 박스: CAM과 Grad_Cam으로 물체의 위치를 찾는 detection을 해 보도록 하겠습니다.\n",
     "\n"
    ]
   },
@@ -1802,8 +1810,8 @@
    "metadata": {},
    "source": [
     "## IoU 구하기\n",
-    "### 1) 정답 바운딩 박스(ground truth)와 예측값 바운딩 박스(prediction box) 두 가지를 이용해서 IoU를 계산하는 get_iou() 함수를 만들어 주세요.\n",
-    "\n",
+    "### 1) IoU를 계산하는 get_iou() 함수를 만들어 보기\n",
+    "#### - 정답 바운딩 박스(ground truth)와 예측값 바운딩 박스(prediction box) 두 가지를 이용\n",
     "~~~\n",
     "def get_iou(gt_bbox, pred_bbox):\n",
     "    iou = None\n",
@@ -1847,6 +1855,7 @@
     }
    ],
    "source": [
+    "# CAM 바운딩 박스\n",
     "cam_pred_bbox = rect_to_minmax(cam_rect, item['image'])\n",
     "cam_pred_bbox"
    ]
@@ -1871,6 +1880,7 @@
     }
    ],
    "source": [
+    "# Grad_CAM 바운딩 박스\n",
     "grad_cam_pred_bbox = rect_to_minmax(grad_cam_rect, item['image'])\n",
     "grad_cam_pred_bbox"
    ]
@@ -1919,6 +1929,7 @@
     }
    ],
    "source": [
+    "# CAM IoU 구하기\n",
     "get_iou(cam_pred_bbox, item['bbox'])"
    ]
   },
@@ -1939,6 +1950,7 @@
     }
    ],
    "source": [
+    "# Grad_CAM IoU 구하기\n",
     "get_iou(grad_cam_pred_bbox, item['bbox'])"
    ]
   },
@@ -1963,13 +1975,6 @@
     "    - CAM: 0.7414\n",
     "    - Grad_CAM: 0.7572"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
